content without _meta.js

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -6,4 +6,6 @@ This GitBook collects explanations, examples, and references of a wide range of 
 
 - Advanced readers, who may look for details on developing patterns, contract security, on-chain data, or protocol mechanics.
 
+This GitBook not only serves as a public resource but also as an internal training ground for our members. Our goal is to equip aspiring developers with the skills and knowledge needed to confidently participate in web3 hackathons and contribute to real-world blockchain projects. We believe in learning by doing, and this guide is the first step on an exciting journey into the world of decentralized applications.
+
 The pages are organized so you can jump directly to what you need. This GitBook is updated over time as new topics come up in projects, workshops, and general study.
