schedule page + emojis

--- a/app/about/page.mdx
+++ b/app/about/page.mdx
@@ -1,4 +1,4 @@
-# About this GitBook
+# 📖 About this GitBook
 
 This GitBook collects explanations, examples, and references of a wide range of blockchain topics taught and explored within the **TUM Blockchain Club**. It is meant for two types of readers:
 
