added content for git

--- a/app/basics/git/page.mdx
+++ b/app/basics/git/page.mdx
@@ -1,1 +1,67 @@
 # 🌿 Git
+
+
+
+
+[Git](https://git-scm.com/docs/git) is the standard tool for tracking code changes and collaborating. It is essential for anyone working on smart contracts, blockchain tooling, or decentralized applications. Its structure resembles a lightweight local “ledger” that records every update to your project.
+
+### 🧱 Why does it matter in Web3
+
+- Keeps a transparent history of all code changes
+- Branching allows safe experimentation (similar to testnets)
+- Pull requests enable review before merging (like proposing protocol upgrades)
+- Crucial when multiple contributors work on the same smart-contract or dApp repository
+
+### 🚀 Core Commands
+```bash
+git clone <repo>      # Download the project
+git status            # View changes
+git add .             # Stage edits
+git commit -m ""      # Create a new commit ('block' in your history)
+git pull              # Sync with remote updates
+git push              # Publish your changes
+```
+
+
+### 🌿 Typical Web3 Workflow
+
+* **Clone a smart contract template or protocol repository**: [Solana Starter Kit](https://github.com/SolanaUpdateTools/solana-starter-kit), [dapp-scaffold (Solana)](https://github.com/solana-labs/dapp-scaffold), [Scaffold-ETH (Ethereum)](https://github.com/scaffold-eth/scaffold-eth-2), [template-ethereum-contracts](https://github.com/wighawag/template-ethereum-contracts)
+
+* **Create a feature branch to test new logic or contract upgrades**  
+  Keeps your experiments isolated from the main codebase; you can safely test without breaking the main protocol.  
+  Example commands:
+  ```bash
+  # Create and switch to a new branch
+  git checkout -b feature/my-new-contract
+
+  # Check branch status
+  git status
+
+* **Submit a pull request for review**  
+  Similar to proposing an on-chain improvement. Your code can be audited and discussed by peers before merging:  
+  ```bash
+  # Push your feature branch to remote
+  git push origin feature/my-new-contract
+
+  # Open a pull request on GitHub/GitLab
+  # (usually via the repository web interface)
+
+* **Merge only after audits or peer review**  
+  Ensures that all changes are verified, reducing the risk of bugs or vulnerabilities in your deployed contracts.  
+  ```bash
+  # Switch to main branch
+  git checkout main
+
+  # Merge the feature branch after approval
+  git merge feature/my-new-contract
+
+  # Push merged changes to remote
+  git push origin main
+
+
+
+### 🛡 Good Practices
+- Write clear commit messages
+- Pull regularly to avoid conflicts
+- Avoid pushing directly to main
+- Review code with the same care as auditing a smart contract
